Bug 1249230 - Prepend an extra colon to the pseudo type string. r=birtles